--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-05-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/CloneNotSupportedException/classInfo/InstanceOf.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/isLocalClass.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/isMemberClass.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/isPrimitive.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/isSynthetic.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-05-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/CloneNotSupportedException/classInfo/getDeclaredAnnotations.java:
