--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-05-27  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getInterfaces.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getModifiers.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getName.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getPackage.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getSimpleName.java:
+	* testlet/java/lang/CloneNotSupportedException/classInfo/getSuperclass.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-05-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/CloneNotSupportedException/classInfo/isArray.java:
