--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-05-30  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/EnumConstantNotPresentException/classInfo/isArray.java:
+	* testlet/java/lang/EnumConstantNotPresentException/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/EnumConstantNotPresentException/classInfo/isEnum.java:
+	* testlet/java/lang/EnumConstantNotPresentException/classInfo/isInstance.java:
+	* testlet/java/lang/EnumConstantNotPresentException/classInfo/isInterface.java:
+	Added two new tests and updated three ones.
+
 2013-05-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/EnumConstantNotPresentException/TryCatch.java:
