--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-06-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Error/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/Error/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/Error/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/Error/classInfo/getDeclaredConstructors.java:
+	Four new tests added for checking Error class.
+
 2013-06-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Error/classInfo/getDeclaredField.java:
