--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-06-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Error/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/Error/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/Error/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Error/classInfo/getEnclosingMethod.java:
+	Another new tests added for checking Error class.
+
 2013-06-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Error/classInfo/getDeclaredAnnotations.java:
