--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-06-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Error/classInfo/getPackage.java:
+	* testlet/java/lang/Error/classInfo/getSimpleName.java:
+	* testlet/java/lang/Error/classInfo/getSuperclass.java:
+	* testlet/java/lang/Error/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/Error/classInfo/isInstance.java:
+	* testlet/java/lang/Error/classInfo/isInterface.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-06-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Error/classInfo/getDeclaringClass.java:
