--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2013-06-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Exception/TryCatch.java:
+	* testlet/java/lang/Exception/constructor.java:
+	* testlet/java/lang/Exception/classInfo/InstanceOf.java:
+	* testlet/java/lang/Exception/classInfo/getInterfaces.java:
+	* testlet/java/lang/Exception/classInfo/getModifiers.java:
+	* testlet/java/lang/Exception/classInfo/getName.java:
+	* testlet/java/lang/Exception/classInfo/getPackage.java:
+	* testlet/java/lang/Exception/classInfo/getSimpleName.java:
+	Updated, added JDK tags.
+
 2013-06-27  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Error/classInfo/getInterfaces.java:
