--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-07-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Exception/classInfo/getAnnotation.java:
+	* testlet/java/lang/Exception/classInfo/getAnnotations.java:
+	* testlet/java/lang/Exception/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Exception/classInfo/getClasses.java:
+	* testlet/java/lang/Exception/classInfo/getComponentType.java:
+	Five new tests added into testlet/java/lang/Exception/classInfo
+	directory.
+
 2013-06-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Exception/TryCatch.java:
