--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-07-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Exception/classInfo/isInterface.java:
+	* testlet/java/lang/Exception/classInfo/isLocalClass.java:
+	* testlet/java/lang/Exception/classInfo/isMemberClass.java:
+	* testlet/java/lang/Exception/classInfo/isPrimitive.java:
+	* testlet/java/lang/Exception/classInfo/isSynthetic.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-07-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Exception/classInfo/getDeclaredAnnotations.java:
