--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-07-23  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getAnnotation.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getAnnotations.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getField.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getFields.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getMethod.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getMethods.java:
+	Six new tests added into testlet/java/lang/ExceptionInInitializerError/classInfo.
+
 2013-07-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ExceptionInInitializerError/TryCatch.java:
