--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-07-25  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredField.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/ExceptionInInitializerError/classInfo/getDeclaredMethods.java:
+	Six new tests added into testlet/java/lang/ExceptionInInitializerError/classInfo.
+
 2013-07-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ExceptionInInitializerError/classInfo/getCanonicalName.java:
