--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-07-31  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalAccessError/TryCatch.java:
+	* testlet/java/lang/IllegalAccessError/constructor.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/InstanceOf.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/isMemberClass.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/isPrimitive.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/isSynthetic.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-07-30  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ExceptionInInitializerError/classInfo/getSimpleName.java:
