--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-08-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalAccessError/classInfo/getAnnotation.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getAnnotations.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getConstructor.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getConstructors.java:
+	Five new tests added into testlet/java/lang/IllegalAccessError/classInfo.
+
 2013-07-31  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalAccessError/TryCatch.java:
