--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-08-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalAccessError/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/IllegalAccessError/classInfo/getEnclosingMethod.java:
+	Six new tests added into testlet/java/lang/IllegalAccessError/classInfo.
+
 2013-08-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalAccessError/classInfo/getSimpleName.java:
