--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-08-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalAccessException/TryCatch.java:
+	* testlet/java/lang/IllegalAccessException/constructor.java:
+	* testlet/java/lang/IllegalAccessException/classInfo/InstanceOf.java:
+	* testlet/java/lang/IllegalAccessException/classInfo/getInterfaces.java:
+	* testlet/java/lang/IllegalAccessException/classInfo/getModifiers.java:
+	* testlet/java/lang/IllegalAccessException/classInfo/getName.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-08-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalAccessError/classInfo/getInterfaces.java:
