--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-09-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalArgumentException/classInfo/getConstructor.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getConstructors.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getField.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getFields.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getMethod.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getMethods.java:
+	Six new tests added into testlet/java/lang/IllegalArgumentException/classInfo.
+
 2013-08-30  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalArgumentException/classInfo/isInstance.java:
