--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-09-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredField.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredMethods.java:
+	Six new tests added into testlet/java/lang/IllegalArgumentException/classInfo.
+
 2013-09-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalArgumentException/classInfo/getAnnotation.java:
