--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-09-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalArgumentException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getComponentType.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/IllegalArgumentException/classInfo/getEnclosingMethod.java:
+	Five new tests added into testlet/java/lang/IllegalArgumentException/classInfo.
+
 2013-09-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalArgumentException/classInfo/getDeclaredConstructor.java:
